Micky: Fixed z-index for MyTeamList

--- a/web/src/components/smartComponents/MyTeamLists/MyTeamList/MyTeamList.module.css
+++ b/web/src/components/smartComponents/MyTeamLists/MyTeamList/MyTeamList.module.css
@@ -154,6 +154,8 @@
   width: 100%;
   height: 150px;
   margin-bottom: 5%;
+  position: relative;
+  z-index: 1;
 }
 
 .landingDiv .teamContainer {
